--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -34,19 +34,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
-        android:text="Play Again"
-        android:textAllCaps="false"
         android:onClick="playAgain"
-        />
+        android:text="Play Again" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
-        android:text="Main Menu"
-        android:textAllCaps="false"
         android:onClick="returnToMain"
-        />
+        android:text="Menu" />
 
 
 
